# axum-api

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose-scan.yml  docker-compose.yml  sonar-project.properties
.github/workflows/: cicd.yml
crates/axum-api/: .env.example  Cargo.toml  Dockerfile  build.rs
crates/axum-api/src/: main.rs
crates/axum-api/src/adapters/: mod.rs
crates/axum-api/src/adapters/http/middlewares/: auth_middleware.rs
crates/axum-api/src/adapters/messaging/kafka/: producer.rs
crates/axum-api/src/application/: app_error.rs
crates/axum-api/src/application/use_cases/: auth.rs
crates/axum-api/src/domain/events/: handler.rs
crates/axum-api/src/domain/repositories/: mod.rs  token_cache.rs  user.rs
crates/axum-api/src/infra/: app.rs  kafka.rs  mod.rs  mssql_sqlx.rs  mssql_tiberius.rs  redis.rs  setup.rs
crates/user-consumer/: Cargo.toml  Dockerfile
crates/user-consumer/src/: main.rs
crates/user-consumer/src/adapters/messaging/: consumer.rs  handler.rs  mod.rs
crates/user-consumer/src/application/event_handlers/: welcome_email.rs
crates/user-consumer/src/infra/: config.rs  kafka.rs  mod.rs  setup.rs
envoy/: envoy-client.yaml  envoy-server.yaml
envoy/certs/: openssl.cnf  server.crt  server.key
k6/: load-test.js  result-with-db.json  result.json
k6/results/: benchmark_comparison.html  k6_summary_QUIC_20260215_233156.json  k6_summary_TCP_20260215_233156.json  k6_summary_TCP_20260216_092853.json  stats_QUIC_20260215_233156.csv  stats_QUIC_20260215_233156.html  stats_TCP_20260215_233156.csv  stats_TCP_20260215_233156.html
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
proto/: user.proto
scripts/: benchmark_kafka.sh  init_mssql.sql  plot_comparison.py  plot_stats.py
src/: lib.rs  main.rs
src/adapters/grpc/: user_service.rs
src/adapters/http/: app_state.rs  mod.rs  response.rs
src/adapters/http/dto/validators/: mod.rs  validate_uuid.rs
src/adapters/http/extractors/: validate_json.rs
src/adapters/http/middlewares/: auth_middleware.rs
src/adapters/http/routes/: auth.rs  user.rs
src/adapters/messaging/kafka/: consumer.rs  mod.rs  topics.rs
src/adapters/persistence/: mod.rs
src/adapters/persistence/mssql/entities/: user.rs
src/adapters/persistence/mssql/repositories/: user.rs
src/adapters/persistence/postgres/entities/: mod.rs  prelude.rs  user.rs
src/adapters/persistence/postgres/repositories/: user.rs
src/adapters/persistence/redis/: token.rs
src/adapters/persistence/sqlx/repositories/: user.rs
src/adapters/persistence/tiberius/repositories/: user.rs
src/application/: app_error.rs  mod.rs
src/application/event_handles/: welcome_email.rs
src/application/use_cases/: auth.rs  user.rs
src/domain/entities/: prelude.rs  todo.rs  user.rs
src/domain/events/: mod.rs  user.rs
src/domain/repositories/: error.rs  token_cache.rs  user.rs
src/infra/: app.rs  config.rs  db.rs  kafka.rs  mod.rs  mssql.rs  mssql_sqlx.rs  postgres.rs  setup.rs
src/infra/security/: argon2.rs  jwt.rs
summary/: index.html  optimized_report.html
