[package]
name = "user-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
prost = "0.13"
tonic = "0.12"
async-trait = "0.1.89"
thiserror = "2.0.18"
dotenvy = "0.15.7"
anyhow = "1.0.100"
tokio-util = { version = "0.7.18", features = ["full"] }

[build-dependencies]
tonic-build = "0.12"
